{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 548,
  "lineage": "a5509251-856e-ef96-2d6d-c71195003b65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bed433bedfabf1cc",
            "public_dns": "ec2-54-77-127-18.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.77.127.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce3edf0cff21f07",
            "arn": "arn:aws:ec2:eu-west-1:133072409765:instance/i-032c5d81e671986f4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032c5d81e671986f4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "elk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f698a52ece76212",
            "private_dns": "ip-10-5-0-185.eu-west-1.compute.internal",
            "private_ip": "10.5.0.185",
            "public_dns": "ec2-54-194-64-97.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.64.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-029b10bf8823feaf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d1cf747eac98405",
            "tags": {
              "Name": "elk-test-bastion",
              "environment": "elk-test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fc8ba14fe6726c9"
            ]
          },
          "depends_on": [
            "aws_key_pair.main",
            "aws_security_group.public",
            "aws_subnet.public[0]",
            "data.aws_ami.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce3edf0cff21f07",
            "arn": "arn:aws:ec2:eu-west-1:133072409765:instance/i-0d6a529d632be9eae",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6a529d632be9eae",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "elk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098267e2ab615ce1c",
            "private_dns": "ip-10-5-3-94.eu-west-1.compute.internal",
            "private_ip": "10.5.3.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b57ca93fec940224",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b5feb4431940b43",
            "tags": {
              "Name": "elk-test-elasticsearch-01",
              "application": "elasticsearch",
              "environment": "elk-test",
              "exposition": "private",
              "stack": "elk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b0b0a27f91a520a"
            ]
          },
          "depends_on": [
            "aws_key_pair.main",
            "aws_security_group.private",
            "aws_subnet.private",
            "data.aws_ami.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce3edf0cff21f07",
            "arn": "arn:aws:ec2:eu-west-1:133072409765:instance/i-0539a3166892aaf6c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0539a3166892aaf6c",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "elk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b372c354f1d7b6b",
            "private_dns": "ip-10-5-4-49.eu-west-1.compute.internal",
            "private_ip": "10.5.4.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a1ab3f72446cb919",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2923c146cc66d22",
            "tags": {
              "Name": "elk-test-elasticsearch-02",
              "application": "elasticsearch",
              "environment": "elk-test",
              "exposition": "private",
              "stack": "elk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b0b0a27f91a520a"
            ]
          },
          "depends_on": [
            "aws_key_pair.main",
            "aws_security_group.private",
            "aws_subnet.private",
            "data.aws_ami.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce3edf0cff21f07",
            "arn": "arn:aws:ec2:eu-west-1:133072409765:instance/i-062d7e8e60d32da10",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062d7e8e60d32da10",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "elk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed1953a76b58c023",
            "private_dns": "ip-10-5-5-206.eu-west-1.compute.internal",
            "private_ip": "10.5.5.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0765a555ec8a42e58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0735ee11d61595034",
            "tags": {
              "Name": "elk-test-elasticsearch-03",
              "application": "elasticsearch",
              "environment": "elk-test",
              "exposition": "private",
              "stack": "elk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b0b0a27f91a520a"
            ]
          },
          "depends_on": [
            "aws_key_pair.main",
            "aws_security_group.private",
            "aws_subnet.private",
            "data.aws_ami.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce3edf0cff21f07",
            "arn": "arn:aws:ec2:eu-west-1:133072409765:instance/i-04ac0512c3f836f5e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ac0512c3f836f5e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "elk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4b367f9cdfeadbc",
            "private_dns": "ip-10-5-0-226.eu-west-1.compute.internal",
            "private_ip": "10.5.0.226",
            "public_dns": "ec2-34-245-165-22.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.165.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a3840e7d78e68fe8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d1cf747eac98405",
            "tags": {
              "Name": "elk-test-kibana-01",
              "application": "kibana",
              "environment": "elk-test",
              "exposition": "public",
              "stack": "elk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fc8ba14fe6726c9"
            ]
          },
          "depends_on": [
            "aws_key_pair.main",
            "aws_security_group.public",
            "aws_subnet.public",
            "data.aws_ami.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ce3edf0cff21f07",
            "arn": "arn:aws:ec2:eu-west-1:133072409765:instance/i-056ae4c0d60a33d42",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056ae4c0d60a33d42",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "elk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b70a85f2958808ce",
            "private_dns": "ip-10-5-1-173.eu-west-1.compute.internal",
            "private_ip": "10.5.1.173",
            "public_dns": "ec2-3-249-73-221.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.73.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c0e170f3844c1191",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c69a0aee3ebdf03",
            "tags": {
              "Name": "elk-test-kibana-02",
              "application": "kibana",
              "environment": "elk-test",
              "exposition": "public",
              "stack": "elk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fc8ba14fe6726c9"
            ]
          },
          "depends_on": [
            "aws_key_pair.main",
            "aws_security_group.public",
            "aws_subnet.public",
            "data.aws_ami.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-020eca7bbad240a22",
            "owner_id": "133072409765",
            "tags": {
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:loadbalancer/app/elk-test/b4072104f248b704",
            "arn_suffix": "app/elk-test/b4072104f248b704",
            "dns_name": "elk-test-272098067.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:loadbalancer/app/elk-test/b4072104f248b704",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elk-test",
            "security_groups": [
              "sg-08fc8ba14fe6726c9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c69a0aee3ebdf03"
              },
              {
                "subnet_id": "subnet-09d1cf747eac98405"
              },
              {
                "subnet_id": "subnet-0a2d2ded3ba0bae9d"
              }
            ],
            "subnets": [
              "subnet-07c69a0aee3ebdf03",
              "subnet-09d1cf747eac98405",
              "subnet-0a2d2ded3ba0bae9d"
            ],
            "tags": {
              "Name": "elk-test",
              "environment": "test",
              "exposition": "public"
            },
            "vpc_id": "vpc-05da50b20e5b0984c",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kibana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:listener/app/elk-test/b4072104f248b704/a610806eed91fcfa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:listener/app/elk-test/b4072104f248b704/a610806eed91fcfa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:loadbalancer/app/elk-test/b4072104f248b704",
            "port": 5601,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.main",
            "aws_lb_target_group.kibana"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "kibana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:listener-rule/app/elk-test/b4072104f248b704/a610806eed91fcfa/8a5a4cad65e00843",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:listener-rule/app/elk-test/b4072104f248b704/a610806eed91fcfa/8a5a4cad65e00843",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:listener/app/elk-test/b4072104f248b704/a610806eed91fcfa",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.kibana",
            "aws_lb_target_group.kibana"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kibana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea",
            "arn_suffix": "targetgroup/elk-test-kibana/cb42b1907380e7ea",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "elk-test-kibana",
            "port": 5601,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kibana",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea-20200526102123615000000004",
            "port": 5601,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea",
            "target_id": "i-04ac0512c3f836f5e"
          },
          "depends_on": [
            "aws_instance.public",
            "aws_lb_target_group.kibana"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea-20200526102123573800000003",
            "port": 5601,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:133072409765:targetgroup/elk-test-kibana/cb42b1907380e7ea",
            "target_id": "i-056ae4c0d60a33d42"
          },
          "depends_on": [
            "aws_instance.public",
            "aws_lb_target_group.kibana"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed433bedfabf1cc",
            "id": "nat-039b26f51db1c477b",
            "network_interface_id": "eni-0f4f3dde8eca721a9",
            "private_ip": "10.5.0.123",
            "public_ip": "54.77.127.18",
            "subnet_id": "subnet-09d1cf747eac98405"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public[0]"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-058aa2fd42475bcc7",
            "owner_id": "133072409765",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-039b26f51db1c477b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "elk-test",
              "exposition": "private"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0392676b8bd958dc0",
            "owner_id": "133072409765",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020eca7bbad240a22",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "elk-test",
              "exposition": "public"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b57fccb08eb09d",
            "route_table_id": "rtb-058aa2fd42475bcc7",
            "subnet_id": "subnet-02b5feb4431940b43"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d49168d2adc0006f",
            "route_table_id": "rtb-058aa2fd42475bcc7",
            "subnet_id": "subnet-0e2923c146cc66d22"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095bcfc3d5057fd81",
            "route_table_id": "rtb-058aa2fd42475bcc7",
            "subnet_id": "subnet-0735ee11d61595034"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051962e624c25aac3",
            "route_table_id": "rtb-0392676b8bd958dc0",
            "subnet_id": "subnet-09d1cf747eac98405"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067abdab7aaa0abc7",
            "route_table_id": "rtb-0392676b8bd958dc0",
            "subnet_id": "subnet-07c69a0aee3ebdf03"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0700e7d2fc759b4e3",
            "route_table_id": "rtb-0392676b8bd958dc0",
            "subnet_id": "subnet-0a2d2ded3ba0bae9d"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:security-group/sg-03b0b0a27f91a520a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-03b0b0a27f91a520a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "ES Discover",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "ES HTTP",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "Logstash pipelines",
                "from_port": 5044,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5050
              },
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "Monitoring ports",
                "from_port": 9600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9610
              },
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200526102045961700000002",
            "name_prefix": null,
            "owner_id": "133072409765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk-test-private",
              "environment": "test",
              "exposition": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:security-group/sg-08fc8ba14fe6726c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08fc8ba14fe6726c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kibana HTTP external",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "Monitoring ports",
                "from_port": 9600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9610
              }
            ],
            "name": "terraform-20200526102045954400000001",
            "name_prefix": null,
            "owner_id": "133072409765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk-test-private",
              "environment": "test",
              "exposition": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:subnet/subnet-02b5feb4431940b43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.5.3.0/24",
            "id": "subnet-02b5feb4431940b43",
            "map_public_ip_on_launch": false,
            "owner_id": "133072409765",
            "tags": {
              "Name": "elk-test-private-01",
              "az": "eu-west-1a",
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:subnet/subnet-0e2923c146cc66d22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.5.4.0/24",
            "id": "subnet-0e2923c146cc66d22",
            "map_public_ip_on_launch": false,
            "owner_id": "133072409765",
            "tags": {
              "Name": "elk-test-private-02",
              "az": "eu-west-1a",
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:subnet/subnet-0735ee11d61595034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.5.5.0/24",
            "id": "subnet-0735ee11d61595034",
            "map_public_ip_on_launch": false,
            "owner_id": "133072409765",
            "tags": {
              "Name": "elk-test-private-03",
              "az": "eu-west-1a",
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:subnet/subnet-09d1cf747eac98405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.5.0.0/24",
            "id": "subnet-09d1cf747eac98405",
            "map_public_ip_on_launch": true,
            "owner_id": "133072409765",
            "tags": {
              "Name": "elk-test-public-01",
              "az": "eu-west-1a",
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:subnet/subnet-07c69a0aee3ebdf03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.5.1.0/24",
            "id": "subnet-07c69a0aee3ebdf03",
            "map_public_ip_on_launch": true,
            "owner_id": "133072409765",
            "tags": {
              "Name": "elk-test-public-02",
              "az": "eu-west-1b",
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:subnet/subnet-0a2d2ded3ba0bae9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.5.2.0/24",
            "id": "subnet-0a2d2ded3ba0bae9d",
            "map_public_ip_on_launch": true,
            "owner_id": "133072409765",
            "tags": {
              "Name": "elk-test-public-03",
              "az": "eu-west-1c",
              "environment": "elk-test"
            },
            "vpc_id": "vpc-05da50b20e5b0984c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:133072409765:vpc/vpc-05da50b20e5b0984c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0dc02ee4b10bab107",
            "default_route_table_id": "rtb-08fb6027f283902c2",
            "default_security_group_id": "sg-0871a5d4a3f43d2d2",
            "dhcp_options_id": "dopt-6a2e0a0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05da50b20e5b0984c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08fb6027f283902c2",
            "owner_id": "133072409765",
            "tags": {
              "environment": "elk-test"
            }
          }
        }
      ]
    }
  ]
}